Starter content improvement

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ Theme Name: Digital Nomad
 Theme URI: https://www.jasom.net/digital-nomad-wordpress-theme/
 Author: Jasom Dotnet
 Author URI: https://www.jasom.net
-Description: It's not in theme, it's in content! But good theme also helps...
-Version: 1.0.7
+Description: Mobile-first one-column theme for digital nomads like you. It's not in theme, it's in content! But good theme also helps...
+Version: 1.0.8
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Tags: blog, one-column, custom-background, custom-header, custom-logo, featured-image-header, featured-images, full-width-template, theme-options, threaded-comments, translation-ready
