--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://www.jasom.net/digital-nomad-wordpress-theme/
 Author: Jasom Dotnet
 Author URI: https://www.jasom.net
 Description: Mobile-first one-column theme for digital nomads like you. It's not in theme, it's in content! But good theme also helps...
-Version: 1.0.9
+Version: 1.1.0
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Tags: blog, one-column, custom-background, custom-header, custom-logo, featured-image-header, featured-images, full-width-template, theme-options, threaded-comments, translation-ready
@@ -113,12 +113,14 @@ body:not(.intended_front_page) #jump_down  {
     line-height: 1.75;
     font-weight: 300;
     text-align: justify;
-    display: inherit;
 }
 .header_text a {
     color: #fff;
     font-weight: bold;
     text-decoration: none;
+}
+.main_header_block {
+    display: inherit;
 }
 #general {
     width: 100%;
@@ -188,6 +190,10 @@ body:not(.intended_front_page) #jump_down  {
 .post_category {
     text-align: center;
     margin-bottom: 1em;
+}
+.post_category_bottom {
+    margin-top: 1em;
+    margin-bottom: 0;
 }
 .post_content {
     text-align: justify;
