--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://www.jasom.net/digital-nomad-wordpress-theme/
 Author: Jasom Dotnet
 Author URI: https://www.jasom.net
 Description: Mobile-first one-column theme for digital nomads like you. It's not in theme, it's in content! But good theme also helps...
-Version: 1.1.4
+Version: 1.1.5
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Tags: blog, photography, one-column, custom-background, custom-header, custom-logo, featured-image-header, featured-images, full-width-template, theme-options, threaded-comments, translation-ready, custom-menu
@@ -633,20 +633,20 @@ span.required {
 figure {
     margin: 0;
 }
-figure.wp-block-embed-youtube {
+.wp-block-embed-youtube .wp-block-embed__wrapper {
     position: relative;
     width: 100%;
     height: 0;
     padding-bottom: 56.25%;
 }
-figure.wp-block-embed-youtube iframe {
+.wp-block-embed-youtube .wp-block-embed__wrapper iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 }
-iframe[src*="youtube.com"] {
+.wp-block-embed__wrapper iframe[src*="youtube.com"] {
     width: 100%;
 }
 table {
