--- a/style.css
+++ b/style.css
@@ -4,15 +4,17 @@ Theme URI: https://www.jasom.net/digital-nomad-wordpress-theme/
 Author: Jasom Dotnet
 Author URI: https://www.jasom.net
 Description: Mobile-first one-column theme for digital nomads like you. It's not in theme, it's in content! But good theme also helps...
-Tested up to: 5.5
-Version: 1.1.7
+Tested up to: 5.7
+Version: 1.1.8
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Tags: blog, photography, one-column, custom-background, custom-header, custom-logo, featured-image-header, featured-images, full-width-template, theme-options, threaded-comments, translation-ready, custom-menu
 Text Domain: digital-nomad
 */
-
+html {
+    scroll-behavior: smooth;
+}
 html, body {
     height: 100%; 
     line-height: 1.5;
